<resources>
    <string name="app_name">Medical Companion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_patient">Sign in as Patient</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_email">Doctor Email</string>
    <string name="personal_information">Personal Information</string>
    <string name="address">Address</string>
    <string name="doctor_work_history">Work History</string>
    <string name="doctor_gender">Gender</string>
    <string name="phone_number">Phone</string>
    <string name="action_save">Save</string>
    <string name="education">Education</string>

    <string name="title_activity_navigation">MainActivity</string>
    <string name="patient_name">Patient Name </string>
    <string name="prompt_address">Address</string>


    <string name="patient_address">Patient Address</string>
    <string name="patient_email">Patient Email</string>
    <string name="patient_gender">Gender</string>
    <string name="patient_description">Description</string>
    <string name="patient_phone_number">Phone Number</string>
    <string name="patient_action_save">Save</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="suggested_drug">Suggested Drug</string>
    <string name="weight">Weight</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="disease_description">Disease Description</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="spinner_title">Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_patient_navigation">PatientNavigationActivity</string>
    <string name="edit">Edit</string>
    <string name="form">Form</string>
</resources>
