<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@drawable/back2"
              tools:context="com.adeyeye.medicalcompanion.PatientProfileActivity"
              android:gravity="top">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/patient_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textStyle="bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/patient_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/patient_address"
        android:imeOptions="actionNext"
        android:inputType="textPostalAddress"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/patient_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_description"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/patient_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_email"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textStyle="bold"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        >

        <EditText
            android:id="@+id/patient_gender"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:layout_height="wrap_content"
            android:hint="@string/patient_gender"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:textStyle="bold"/>




    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        >
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/patient_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_phone_number"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/white"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:textIsSelectable="false"
            android:textStyle="bold"/>


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/patient_save_button"
        style="?android:textAppearanceMedium"
        android:background="@color/white"
        android:textColor="@color/green"
        android:onClick="save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/patient_action_save"
        android:textStyle="bold"/>

</LinearLayout>
